--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap&family=Shippori+Antique+B1&display=swap');
 
+
 .center {
     display: flex;
     justify-content: center;
@@ -29,6 +30,33 @@
 .divider:not(:empty)::after {
     margin-left: 4em;
 }
+
+.divider-title {
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    color:#5482B6;
+}
+
+/*==COLOR CLASSES==*/
+
+/*--Font-Color*/
+.col-font-blue {
+    color: #5482B6;
+}
+
+/*--Border-Color*/
+.col-bord-blue {
+    border-color: #5482B6;
+}
+
+/*--Backround-Color*/
+.col-back-blue {
+    background-color: #5482B6;
+}
+
+
+
 
 footer {
     font-family: 'Oswald', sans-serif;
